Changed text from transaction processing engine to payment gateways

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         <p class="section-title">Highlights</p>
         <div class="grid">
             <article class="card">
-                <h3>Transaction Processing Engine</h3>
+                <h3>Payment Gateways</h3>
                 <p>Led scope and delivery for a secure, scalable gateway handling multiple tender types and downstream reporting—high test coverage and operational rigor.</p>
                 <div class="tag-row">
                     <span class="tag">Payments</span>
