Changed the nav text

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
             <span>Greyfeather</span>
         </a>
         <nav aria-label="Primary">
-            <a href="#builds">Solutions Builder</a>
+            <a href="#about">About</a>
             <a href="#toolbox">Toolbox</a>
             <a href="#contact">Contact</a>
         </nav>
